# myairflow

./: README.md  pyproject.toml
dags/: .seoul.py.swp  README.md  catchup.py  hello.py  seoul.py  virtual.py
src/myairflow/: send_notify.py
tests/: test_notify.py
